@@ -1,3 +1,8 @@
+2000-06-20  Jason Tibbitts  <tibbs@morpheus.math.uh.edu>
+
+	* lib/Majordomo.pm (who_chunk): Fix some bustedness in
+	who-enhanced GLOBAL that I introduced with who-export.
+
 2000-06-20  Jason L Tibbitts III  <tibbs@math.uh.edu>
 
 	* lib/Mj/Format.pm (show): Display bounce data as well.
